--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-07  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
 
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_chain):
+	  drop incoming buffers that generate decoding errors
+
+2004-07-07  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
+
 	* ext/ffmpeg/gstffmpeg.c: (gst_ffmpeg_log_callback), (plugin_init):
 	* ext/ffmpeg/gstffmpegcodecmap.h:
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_chain):
