--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init):
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init):
+	  d'oh, put them back
+
 2004-07-07  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_chain):
