--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-07-13  Johan Dahlin  <johan@gnome.org>
+
+	* testsuite/event.py (EventFileSrcTest.setUp): Start the pipeline,
+	so we don't get warnings when sending events
+	(EventTest.setUp): Ditto.
+
+	* testsuite/pad.py: New test, only testing simple pad queries so far.
+
+	* testsuite/Makefile.am (tests): Add missing tests
+
+	* gst/gst.override (_wrap_gst_pad_query): Raise RuntimeError if 
+	the return value is False and only return the queried value.
+
 2004-07-02  David Schleef  <ds@schleef.org>
 
 	* configure.ac:  Correctly check for XML tools.  Correctly set
