--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac: bump nano
+
 === gst-ffmpeg 0.8.1 ===
 
 2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>
