--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* ext/ffmpeg/gstffmpegcolorspace.c: (gst_ffmpegcsp_chain):
+	  no point in doing any chaining if the pad we want to push from
+	  isn't usable.
+
+
+2004-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* configure.ac: bump nano
 
 === gst-ffmpeg 0.8.1 ===
