--- a/ext/dvdnav/README
+++ b/ext/dvdnav/README
@@ -6,6 +6,6 @@ http://dvd.sourceforge.net/
 
 Try this:
 
-./gst-launch dvdnavsrc location=/dev/dvd ! mpegdemux .video_%02d ! { queue ! mpeg2dec ! xvideosink } mpegdemux0.private_stream_1_0 ! { queue ! a52dec ! osssink }
+./gst-launch dvdnavsrc location=/dev/dvd ! dvddemux .current_video ! { queue ! mpeg2dec ! xvimagesink } dvddemux0.current_audio ! { queue ! a52dec ! osssink }
 
 You can give title, chapter, and angle parameters to dvdnavsrc.
