--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* testsuite/struct.py:
+	  add a testsuite for structs, not yet active
+
 2004-08-03  Johan Dahlin  <johan@gnome.org>
 
 	* configure.ac: Require python 2.3
