--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-06  Johan Dahlin  <johan@gnome.org>
+
+	* testsuite/struct.py (StructureTest.testStructureChange): Enable
+	some tests.
+
+	* gst/gst.override (_wrap_gst_structure_ass_subscript): Impl
+
 2004-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* testsuite/struct.py:
