--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/gst.defs:
+	* gst/gst.override:
+	* testsuite/caps.py:
+	  add a constructor for caps that wraps _new_empty, _from_string
+	  and an alternative to _new_full.
+	  add tests for them.
+
 2004-08-06  Johan Dahlin  <johan@gnome.org>
 
 	* gst/gst.override (_wrap_gst_structure_from_string): Impl.
