--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-16 Iain <iaingnome@gmail.com>
+
+	* ext/ffmpeg/gstffmpegmux.c (gst_ffmpegmux_register): Free name fix 
+	leak.
+
 2004-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* ext/ffmpeg/gstffmpegcolorspace.c: (gst_ffmpegcsp_chain):
