--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_pixfmt_to_caps),
+	(gst_ffmpeg_caps_to_pixfmt):
+	* ext/ffmpeg/gstffmpegcolorspace.c: (gst_ffmpegcsp_pad_link),
+	(gst_ffmpegcsp_init), (gst_ffmpegcsp_chain),
+	(gst_ffmpegcsp_change_state), (gst_ffmpegcsp_register):
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_chain):
+	  Move palette handling over from the decoder to the colorspace
+	  conversion plugin (where you would expect it).
+
 2004-10-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
