--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* configure.ac:
+	  CVS.
+
 === release 0.8.2 ===
 
 2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
