gst-ffmpeg.spec.in: Remove unused 'versioning' variable.
Original commit message from CVS:
* gst-ffmpeg.spec.in:
Remove unused 'versioning' variable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* gst-ffmpeg.spec.in:
+	  Remove unused 'versioning' variable.
+
+2004-10-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_init),
 	(gst_ffmpegenc_chain_video):
 	  Set chain function before adding pad, fix memleak on error, error
