--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegcodecmap.c:
+	(gst_ffmpeg_get_codecid_longname):
+	* ext/ffmpeg/gstffmpegcodecmap.h:
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
+	(gst_ffmpegdec_register):
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init),
+	(gst_ffmpegenc_register):
+	  Hmm, fancy names...
+
 2004-10-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac: up req of GStreamer since we use fractions
