--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
+	(gst_ffmpeg_codectype_to_caps), (gst_ffmpeg_caps_with_codecid):
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init),
+	(gst_ffmpegenc_connect), (gst_ffmpegenc_register):
+	  Fix encoders. Fix if encoder supports >1 caps.
+
+2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegcodecmap.c:
 	(gst_ffmpeg_get_codecid_longname):
 	* ext/ffmpeg/gstffmpegcodecmap.h:
