--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* ext/ffmpeg/gstffmpegcolorspace.c: (gst_ffmpegcsp_pad_link):
+	  Backport changes from ffmpegcolorspace (gst-plugins) so we can
+	  then move the whole of this plugin back and deprecate this (no,
+	  I'm not insane).
+
+2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
 	(gst_ffmpeg_codectype_to_caps), (gst_ffmpeg_caps_with_codecid):
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init),
