--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-04  Johan Dahlin  <johan@gnome.org>
+
+	* gst/interfaces.override (_wrap_gst_mixer_list_tracks): Impl.
+	(_wrap_gst_tuner_list_norms, _wrap_gst_tuner_list_channels): Plug 
+	leaks.
+
 === release 0.7.93 ===
 2004-10-11  Johan Dahlin  <johan@gnome.org>
 
