--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-11-04  Johan Dahlin  <johan@gnome.org>
 
+	* gst/gst.override (tag_foreach_func_list): Disable lists instead
+	of raising an exception.
+
+	* gst/gst-types.defs (ImplementsInterface, TagSetter): Define
+	these here.
+
 	* gst/interfaces.override (_wrap_gst_mixer_list_tracks): Impl.
 	(_wrap_gst_tuner_list_norms, _wrap_gst_tuner_list_channels): Plug 
 	leaks.
