--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+=== release 0.7.94 ===
 2004-11-04  Johan Dahlin  <johan@gnome.org>
 
 	* gst/gst.override (tag_foreach_func_list): Disable lists instead
