--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 === release 0.7.94 ===
+
+2004-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* .cvsignore:
+	* examples/Makefile.am:
+	  remove gstplay
+
 2004-11-04  Johan Dahlin  <johan@gnome.org>
 
 	* gst/gst.override (tag_foreach_func_list): Disable lists instead
@@ -12,6 +19,7 @@
 	leaks.
 
 === release 0.7.93 ===
+
 2004-10-11  Johan Dahlin  <johan@gnome.org>
 
 	* configure.ac: Bump version number
