--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-15  Johan Dahlin  <johan@gnome.org>
+
+	* gst/gstmodule.c (init_gst): Reset LC_NUMERIC, since it might
+	change in gst_init_check. Fixes 100% CPU usage in flumotion
+	when using a non C locale.
+
 2004-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pkgconfig/gst-python-uninstalled.pc.in:
