--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
+=== release 0.8.0 ===
 2004-11-15  Johan Dahlin  <johan@gnome.org>
+
+	* configure.ac: bump
 
 	* gst/gst.override (_wrap_gst_tag_setter_get_list): Override, to
 	avoid compiler warning.
