--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
+=== gst-python 0.8.1 ===
 2004-11-29  Johan Dahlin  <johan@gnome.org>
+
+	* configure.ac: Bump version
 
 	* gst/interfaces.defs: 
 	* gst/interfaces.override (_wrap_gst_color_balance_list_channels): 
