--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,39 @@
 2004-12-09  Wim Taymans  <wim@fluendo.com>
 
+	* gst/gst_private.h:
+	* gst/gstbin.c: (gst_bin_class_init), (gst_bin_set_index),
+	(gst_bin_set_clock), (gst_bin_get_clock),
+	(gst_bin_iterate_elements), (gst_bin_get_by_name),
+	(gst_bin_get_by_name_recurse_up), (gst_bin_get_by_interface),
+	(gst_bin_get_all_by_interface):
+	* gst/gstbin.h:
+	* gst/gstelement.c: (gst_element_add_pad),
+	(gst_element_remove_pad), (gst_element_request_pad),
+	(gst_element_post_message), (gst_element_error_full),
+	(gst_element_is_locked_state), (gst_element_set_locked_state),
+	(gst_element_create_task):
+	* gst/gstelement.h:
+	* gst/gstinfo.h:
+	* gst/gstiterator.h:
+	* gst/gstobject.c: (gst_object_init), (gst_object_ref),
+	(gst_object_unref), (gst_object_sink), (gst_object_dispose),
+	(gst_object_finalize), (gst_object_dispatch_properties_changed),
+	(gst_object_set_name), (gst_object_get_name),
+	(gst_object_set_parent), (gst_object_get_parent),
+	(gst_object_unparent), (gst_object_check_uniqueness),
+	(gst_object_save_thyself), (gst_object_restore_thyself),
+	(gst_object_real_restore_thyself), (gst_object_set_property),
+	(gst_object_get_property), (gst_object_get_path_string):
+	* gst/gstobject.h:
+	* gst/gstpad.c: (gst_pad_get_direction), (gst_pad_unlink),
+	(gst_pad_is_linked), (gst_pad_link_filtered),
+	(gst_pad_relink_filtered), (gst_pad_get_peer), (gst_pad_push),
+	(gst_pad_pull), (gst_pad_pull_range):
+	* gst/gstpad.h:
+	More MT safety fixes following the desing doc. 
+
+2004-12-09  Wim Taymans  <wim@fluendo.com>
+
 	* docs/design/part-MT-refcounting.txt:
 	* docs/design/part-conventions.txt:
 	Added design doc for MT-safe API implementation 
