gst/asfdemux/README gst/wavenc/riff.h gst-libs/gst/riff/riff-ids.h gst-libs/gst/riff/riff-media.c add new 4CC codes f...
Original commit message from CVS:
* gst/asfdemux/README
* gst/wavenc/riff.h
* gst-libs/gst/riff/riff-ids.h
* gst-libs/gst/riff/riff-media.c
add new 4CC codes for h263 related codecs
fixes partially bug #155163

--- a/gst/asfdemux/README
+++ b/gst/asfdemux/README
@@ -36,7 +36,7 @@ Known stream fourccs are:
 
 Type		Tags		MIME type
 ------------------------------------------
-H263		H263 I263	
+H263		H263 I263	video/x-h323
 MJPEG		MJPG		video/jpeg	
 MPEG4		DIVX divx DX50	video/mpeg
 		XVID xvid mp4s	
